--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "eslint": "^3.4.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
-    "webpack": "^2.3.3"
+    "webpack": "^2.0.0 || ^3.0.0"
   }
 }
